[gd_scene load_steps=6 format=2]

[ext_resource path="res://menue/main_menue.gd" type="Script" id=1]
[ext_resource path="res://world/terrain/test_set.tres" type="TileSet" id=2]
[ext_resource path="res://characters/npc/NPC.tscn" type="PackedScene" id=3]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

uniform float lod: hint_range(0, 5);

void fragment() {
    COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, lod).rgb;
}"

[sub_resource type="ShaderMaterial" id=2]

shader = SubResource( 1 )
shader_param/lod = 1.0

[node name="main_menue" type="Node"]
script = ExtResource( 1 )

[node name="small_world" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="small_world"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 786433, 0, 0, 786462, 0, 0, 851969, 0, 0, 851998, 0, 0, 917505, 0, 0, 917534, 0, 0, 983041, 0, 0, 983070, 0, 0, 1048577, 0, 0, 1048606, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0 )

[node name="npcs" type="Node" parent="small_world"]

[node name="NPC" parent="small_world/npcs" instance=ExtResource( 3 )]
position = Vector2( 200, 200 )

[node name="NPC2" parent="small_world/npcs" instance=ExtResource( 3 )]
position = Vector2( 200, 100 )

[node name="NPC3" parent="small_world/npcs" instance=ExtResource( 3 )]
position = Vector2( 200, 300 )

[node name="NPC4" parent="small_world/npcs" instance=ExtResource( 3 )]
position = Vector2( 200, 400 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
offset = Vector2( -512, -300 )
anchor_mode = 0
current = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ViewportContainer" type="CanvasLayer" parent="."]

[node name="Main" type="ItemList" parent="ViewportContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -106.5
margin_right = 75.0
margin_bottom = 106.5
items = [ "Server", null, false, "Client", null, false, "Experiments", null, false, "Settings", null, false, "Exit", null, false ]
allow_reselect = true

[node name="VBoxContainer_settings" type="VBoxContainer" parent="ViewportContainer"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -39.0
margin_right = 100.0
margin_bottom = 39.0
rect_min_size = Vector2( 200, 0 )

[node name="text_size_section" type="HSplitContainer" parent="ViewportContainer/VBoxContainer_settings"]
visible = false
margin_right = 165.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="ViewportContainer/VBoxContainer_settings/text_size_section"]
margin_top = 1.0
margin_right = 57.0
margin_bottom = 15.0
text = "Text Size"

[node name="HSlider_textSize" type="HSlider" parent="ViewportContainer/VBoxContainer_settings/text_size_section"]
margin_left = 69.0
margin_right = 165.0
margin_bottom = 16.0
rect_min_size = Vector2( 96, 16 )
min_value = 12.0
max_value = 36.0
value = 12.0
tick_count = 24

[node name="name_section" type="HSplitContainer" parent="ViewportContainer/VBoxContainer_settings"]
margin_right = 200.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ViewportContainer/VBoxContainer_settings/name_section"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Name"

[node name="LineEdit" type="LineEdit" parent="ViewportContainer/VBoxContainer_settings/name_section"]
margin_left = 50.0
margin_right = 200.0
margin_bottom = 24.0
text = "Guest"

[node name="colour_section" type="HSplitContainer" parent="ViewportContainer/VBoxContainer_settings"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="ViewportContainer/VBoxContainer_settings/colour_section"]
margin_top = 3.0
margin_right = 41.0
margin_bottom = 17.0
text = "Colour"

[node name="ColorPickerButton" type="ColorPickerButton" parent="ViewportContainer/VBoxContainer_settings/colour_section"]
margin_left = 53.0
margin_right = 200.0
margin_bottom = 20.0
flat = true
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="ip_section" type="HSplitContainer" parent="ViewportContainer/VBoxContainer_settings"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="ViewportContainer/VBoxContainer_settings/ip_section"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 19.0
text = "Server IP"

[node name="LineEdit" type="LineEdit" parent="ViewportContainer/VBoxContainer_settings/ip_section"]
margin_left = 69.0
margin_right = 200.0
margin_bottom = 24.0
text = "121.216.98.37"

[node name="port_section" type="HSplitContainer" parent="ViewportContainer/VBoxContainer_settings"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="ViewportContainer/VBoxContainer_settings/port_section"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Port"

[node name="SpinBox" type="SpinBox" parent="ViewportContainer/VBoxContainer_settings/port_section"]
margin_left = 38.0
margin_right = 200.0
margin_bottom = 24.0
min_value = 1024.0
max_value = 65535.0
value = 8080.0

[node name="player_limit_section" type="HSplitContainer" parent="ViewportContainer/VBoxContainer_settings"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="ViewportContainer/VBoxContainer_settings/player_limit_section"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Player limit"

[node name="SpinBox" type="SpinBox" parent="ViewportContainer/VBoxContainer_settings/player_limit_section"]
margin_left = 85.0
margin_right = 200.0
margin_bottom = 24.0
value = 32.0

[node name="ToolButton_backSettings" type="ToolButton" parent="ViewportContainer/VBoxContainer_settings"]
margin_top = 136.0
margin_right = 200.0
margin_bottom = 158.0
text = "Back"

[node name="Experiments" type="ItemList" parent="ViewportContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -107.5
margin_right = 81.0
margin_bottom = 107.5
items = [ "Quad Tree", null, false, "Cinemtatic", null, false, "Back", null, false ]
allow_reselect = true

[connection signal="item_selected" from="ViewportContainer/Main" to="." method="_on_Main_item_selected"]
[connection signal="text_entered" from="ViewportContainer/VBoxContainer_settings/ip_section/LineEdit" to="." method="_on_LineEdit_ip_text_entered"]
[connection signal="pressed" from="ViewportContainer/VBoxContainer_settings/ToolButton_backSettings" to="." method="_on_ToolButton_backSettings_pressed"]
[connection signal="item_selected" from="ViewportContainer/Experiments" to="." method="_on_Experiments_item_selected"]
